Fix player UUID issues